Fix whitespace

--- a/templates/gittip.scss
+++ b/templates/gittip.scss
@@ -204,6 +204,7 @@ input {
             display: block;
             font: normal 11px $Helvetica;
             margin: 3px 0;
+            white-space: nowrap;
         }
     }
 
